Aggiunde modifiche iniziali
Inserito l'header e cancellato la classe debug

--- a/index.html
+++ b/index.html
@@ -19,24 +19,61 @@
 		/>
 		<title>Dropbox</title>
 	</head>
-	<body class="debug">
+	<body class="">
 		<!-- #site_header -->
 		<header id="site_header">
-			<div>
-				<div>
-					<nav></nav>
+			<div class="nav">
+				<div class="nav_left">
+					<nav class="list_left">
+						<ul class="list">
+							<li id="logo">
+								<a href="#"><img src="./image/logo-small.png" alt="logo Dropbox" /></a>
+							</li>
+							<li><a href="#">Perchè Dropbox?</a></li>
+							<li><a href="#">Funzioni</a></li>
+							<li><a href="#">Piani e prezzi</a></li>
+						</ul>
+					</nav>
 				</div>
-				<div>
-					<nav></nav>
+				<div class="nav_right">
+					<nav class="list_right">
+						<ul class="list">
+							<li><a href="#">Supporto</a></li>
+							<li><a href="#">Contatta l'ufficio vendite</a></li>
+							<li><a href="#">Accedi</a></li>
+							<li id="btn_sign_in">
+								<a href="#"><button type="submit">Inizia</button></a>
+							</li>
+						</ul>
+					</nav>
 				</div>
 			</div>
-			<div class="jumbo"></div>
+			<div class="jumbo">
+				<div class="container_major">
+					<h1>Tutto ciò che ti serve per il lavoro, <br />in un unico posto</h1>
+					<div class="text">
+						<p>
+							Finalmente tutti i tuoi strumenti, contenuti e <br />
+							colalboratori sono accessibili dallo stesso posto. <br />Dropbox
+							Business è più di uno spazio di <br />archiviazione sicuro: è un
+							modo intelligente e <br />integrato per ottimizzare il flusso di
+							lavoro esistente.
+						</p>
+						<div class="btn_free">
+							<button type="submit">Inizia la tua prova gratuita</button>
+						</div>
+						<div id="subtitle">Annulla in qualsiasi momento</div>
+						<i class="fas fa-arrow-down"></i>
+					</div>
+					<img src="./image/jumbo.png" alt="" />
+				</div>
+			</div>
 		</header>
 		<!-- /#site_header -->
 
 		<!-- #site_main -->
 		<main id="site_main">
-			<section class="section_piano"></section>
+			<section class="section_plan"></section>
 			<section class="section_partner"></section>
 			<section class="section_business"></section>
 			<section class="section_team"></section>
